# aws-demo

./: .gitignore  Makefile  app.py  docker-compose.yml  test.py  test.sh
.circleci/: config.yml
app/: Dockerfile  app.py  pyproject.toml  t.py  test.sh  test_contact_form.py
mysql/: Dockerfile  db.sql
